# softshape-print-agent

./: .env.example  .gitignore  RATES_BAR.xlsx  README.md  bar_menu_from_excel.csv  convert_excel_to_csv.py  package-lock.json  package.json  read_excel.js  read_excel.py  read_excel2.py  vitest.config.js
.github/workflows/: build-print-agent.yml  main.yml
softshape-print-agent/: .env.example  .gitignore  README.md  package-lock.json  package.json  server.js
softshape-print-agent/.github/workflows/: build-print-agent.yml
softshape-print-agent/src/: agentSocket.js  index.html  main.js  styles.css
softshape-print-agent/src-tauri/: Cargo.toml  tauri.conf.json
softshape-print-agent/src-tauri/src/: main.rs  windows_printing.rs
softshape-print-agent/src/__tests__/: agentSocket.test.js
src/: agentSocket.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_server.rs  main.rs  windows_printing.rs
src/__tests__/: agentSocket.test.js
