[package]
name = "softshape-print-agent"
version = "0.1.0"
description = "Windows Print Agent for SoftShape"
authors = ["SoftShape"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows printing
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_IO",
] }
